force-app/main/default/objects/ROSE_Form_Field__c/fields/Conditional_Logic__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Logic__c</fullName>
    <label>Conditional Logic</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>