force-app/main/default/objects/ROSE_Form_Field__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <label>Default Value</label>
    <type>Text</type>
    <length>255</length>
</CustomField>