force-app/main/default/objects/ROSE_Form_Field__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <label>Field Label</label>
    <type>Text</type>
    <length>255</length>
</CustomField>