force-app/main/default/objects/ROSE_Form_Field__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Text</fullName><default>true</default><label>Text</label></value>
            <value><fullName>Number</fullName><default>false</default><label>Number</label></value>
            <value><fullName>Date</fullName><default>false</default><label>Date</label></value>
            <value><fullName>Picklist</fullName><default>false</default><label>Picklist</label></value>
            <value><fullName>Multi-select</fullName><default>false</default><label>Multi-select</label></value>
            <value><fullName>Lookup</fullName><default>false</default><label>Lookup</label></value>
            <value><fullName>GPS</fullName><default>false</default><label>GPS</label></value>
            <value><fullName>Photo</fullName><default>false</default><label>Photo</label></value>
            <value><fullName>Signature</fullName><default>false</default><label>Signature</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>