force-app/main/default/objects/ROSE_Form_Field__c/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <label>Picklist Values</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>