force-app/main/default/objects/ROSE_Form_Field__c/fields/ROSE_Form_Definition__c.field-meta.xml
<CustomField>
    <fullName>ROSE_Form_Definition__c</fullName>
    <label>Form Definition</label>
    <referenceTo>ROSE_Form_Definition__c</referenceTo>
    <relationshipLabel>Form Fields</relationshipLabel>
    <relationshipName>Form_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <required>true</required>
</CustomField>